--- a/.travis.yml
+++ b/.travis.yml
@@ -10,4 +10,11 @@ node_js:
     - "4"
     - "5"
 
-script: npm run ci:test
+install:
+    - nvm install 4
+    - npm install
+
+script:
+    - eslint .
+    - nvm use $TRAVIS_NODE_VERSION
+    - mocha
