--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "private": true,
-  "name": "testiphile",
+  "name": "techtonic",
   "version": "0.0.0",
   "description": "A simple, unopinionated, modular test framework",
   "main": "index.js",
@@ -12,8 +12,11 @@
     "test",
     "testing",
     "tdd",
-    "testiphile"
+    "techtonic"
   ],
+  "browser": {
+    "./lib/timers.js": "./lib/browser-timers.js"
+  },
   "author": "Isiah Meadows",
   "license": "ISC",
   "devDependencies": {
