--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
   "author": "Isiah Meadows <me@isiahmeadows.com>",
   "license": "ISC",
   "devDependencies": {
-    "eslint": "^1.10.3",
-    "eslint-config-isiahmeadows": "0.0.2",
+    "eslint": "^2.0.0",
+    "eslint-config-isiahmeadows": "0.1.2",
     "mocha": "^2.3.4",
     "mockery": "^1.4.0"
   },
@@ -33,6 +33,7 @@
     "glob-parent": "^2.0.0",
     "glob-stream": "^5.3.1",
     "interpret": "^1.0.0",
+    "require-uncached": "^1.0.2",
     "resolve": "^1.1.7"
   }
 }
