--- a/.npmignore
+++ b/.npmignore
@@ -1,3 +1,3 @@
-# This ignores all the extra dev crud in it.
-bin/**/.*
-bin/**/README.md
+# This ignores all the extra dev crud.
+{lib,bin}/**/.*
+{lib,bin}/**/README.md
