--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "./index.js",
     "./definitions.d.ts",
     "./lib",
-    "./bin"
+    "./bin",
+    "./docs"
   ],
   "keywords": [
     "test",
@@ -25,7 +26,7 @@
   "license": "ISC",
   "devDependencies": {
     "eslint": "^2.0.0",
-    "eslint-config-isiahmeadows": "0.1.4",
+    "eslint-config-isiahmeadows": "0.1.5",
     "mocha": "^2.3.4",
     "mockery": "^1.4.0"
   },
@@ -35,5 +36,16 @@
     "interpret": "^1.0.0",
     "require-uncached": "^1.0.2",
     "resolve": "^1.1.7"
-  }
+  },
+  "directories": {
+    "lib": "./lib",
+    "doc": "./docs",
+    "example": "./docs/examples"
+  },
+  "engines": {
+    "node": ">=0.8"
+  },
+  "repository": "isiahmeadows/techtonic",
+  "bugs": "https://github.com/isiahmeadows/techtonic/issues",
+  "homepage": "https://github.com/isiahmeadows/techtonic#readme"
 }
