--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
     "eslint": "^2.0.0",
     "eslint-config-isiahmeadows": "0.1.5",
     "mocha": "^2.3.4",
+    "mock-fs": "^3.8.0",
     "mockery": "^1.4.0"
   },
   "dependencies": {
+    "bluebird": "^3.3.4",
     "glob-parent": "^2.0.0",
     "glob-stream": "^5.3.1",
     "interpret": "^1.0.0",
