--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "index.js",
   "scripts": {
     "lint": "eslint .",
-    "test": "npm run lint && mocha"
+    "compile:babel": "rimraf lib && babel src --out-dir lib --ignore src/cli",
+    "compile": "npm run lint && npm run babel",
+    "test": "npm run lint && mocha",
+    "prepublish": "npm test && npm run compile:babel"
   },
   "files": [
     "./assertions.js",
@@ -13,7 +16,6 @@
     "./index.js",
     "./definitions.d.ts",
     "./lib",
-    "./bin",
     "./docs"
   ],
   "keywords": [
@@ -25,13 +27,37 @@
   "author": "Isiah Meadows <me@isiahmeadows.com>",
   "license": "ISC",
   "devDependencies": {
+    "babel-cli": "^6.6.5",
+    "babel-plugin-check-es2015-constants": "^6.7.2",
+    "babel-plugin-transform-es2015-arrow-functions": "^6.5.2",
+    "babel-plugin-transform-es2015-block-scoped-functions": "^6.6.5",
+    "babel-plugin-transform-es2015-block-scoping": "^6.7.1",
+    "babel-plugin-transform-es2015-classes": "^6.6.5",
+    "babel-plugin-transform-es2015-computed-properties": "^6.6.5",
+    "babel-plugin-transform-es2015-destructuring": "^6.6.5",
+    "babel-plugin-transform-es2015-duplicate-keys": "^6.6.4",
+    "babel-plugin-transform-es2015-for-of": "^6.6.0",
+    "babel-plugin-transform-es2015-function-name": "^6.5.0",
+    "babel-plugin-transform-es2015-literals": "^6.5.0",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.7.0",
+    "babel-plugin-transform-es2015-object-super": "^6.6.5",
+    "babel-plugin-transform-es2015-parameters": "^6.7.0",
+    "babel-plugin-transform-es2015-shorthand-properties": "^6.5.0",
+    "babel-plugin-transform-es2015-spread": "^6.6.5",
+    "babel-plugin-transform-es2015-sticky-regex": "^6.5.0",
+    "babel-plugin-transform-es2015-template-literals": "^6.6.5",
+    "babel-plugin-transform-es2015-unicode-regex": "^6.5.0",
+    "babel-plugin-transform-regenerator": "^6.6.5",
+    "babel-plugin-transform-runtime": "^6.6.0",
+    "babel-register": "^6.7.2",
     "eslint": "^2.0.0",
-    "eslint-config-isiahmeadows": "0.1.5",
+    "eslint-config-isiahmeadows": "0.1.6",
     "mocha": "^2.3.4",
     "mock-fs": "^3.8.0",
     "mockery": "^1.4.0"
   },
   "dependencies": {
+    "babel-runtime": "^6.6.1",
     "bluebird": "^3.3.4",
     "glob-parent": "^2.0.0",
     "glob-stream": "^5.3.1",
