--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "lint": "eslint .",
     "compile": "npm test && rimraf lib && babel src --out-dir lib --ignore src/cli",
-    "test": "npm run lint && mocha",
+    "test": "npm run lint && mocha"
   },
   "files": [
     "./assertions.js",
