--- a/package.json
+++ b/package.json
@@ -26,10 +26,11 @@
   "author": "Isiah Meadows <me@isiahmeadows.com>",
   "license": "ISC",
   "devDependencies": {
+    "coffee-script": "^1.10.0",
     "eslint": "^2.6.0",
     "eslint-config-isiahmeadows": "^0.1.6",
     "minimatch": "^3.0.0",
-    "mocha": "^2.3.4",
+    "mocha": "^2.3.4"
   },
   "dependencies": {
     "bluebird": "^3.3.4",
