--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A simple, unopinionated, modular test framework",
   "main": "index.js",
   "scripts": {
-    "lint": "eslint .",
+    "lint": "eslint . && coffeelint .",
     "test": "npm run lint && mocha"
   },
   "files": [
@@ -27,6 +27,7 @@
   "license": "ISC",
   "devDependencies": {
     "coffee-script": "^1.10.0",
+    "coffeelint": "^1.15.7",
     "eslint": "^2.6.0",
     "eslint-config-isiahmeadows": "^0.1.6",
     "minimatch": "^3.0.0",
@@ -34,8 +35,9 @@
   },
   "dependencies": {
     "bluebird": "^3.3.4",
-    "glob-stream": "^5.3.1",
-    "interpret": "^1.0.0"
+    "glob-stream": "^5.3.2",
+    "interpret": "^1.0.0",
+    "resolve": "^1.1.7"
   },
   "directories": {
     "lib": "lib",
