Allow `require`d modules to export thenables for async export
This is not the case for registered modules.

--- a/package.json
+++ b/package.json
@@ -15,9 +15,10 @@
     "index.d.ts",
     "index.js",
     "lib",
+    "bin",
     "docs"
   ],
-  "bin.ignore": {
+  "bin": {
     "tl": "bin/thallium.js",
     "thallium": "bin/thallium.js",
     "_thallium": "bin/_thallium.js"
