Document CLI, separate contributing guidelines
Drive-by fixes:

- Make AssertionError tests not depend on Thallium
- Try to test Edge (may fix/remove later, once Testling CI is back up).

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "testling": {
     "browsers": [
       "ie/10..latest",
+      "edge/latest",
       "chrome/20..canary",
       "firefox/10..nightly",
       "safari/latest",
