--- a/package.json
+++ b/package.json
@@ -5,7 +5,12 @@
   "main": "index.js",
   "scripts": {
     "lint": "eslint . && coffeelint .",
+    "phantom": "node scripts/generate-browser-entry.js && phantomjs node_modules/mocha-phantomjs-core/mocha-phantomjs-core.js test/index.html dot",
     "test": "npm run lint && mocha"
+  },
+  "browser": {
+    "./lib/inspect.js": "./lib/inspect-browser.js",
+    "./lib/reporter/console.js": "./lib/reporter/browser.js"
   },
   "files": [
     "assertions.d.ts",
@@ -33,12 +38,21 @@
   "author": "Isiah Meadows <me@isiahmeadows.com>",
   "license": "ISC",
   "devDependencies": {
+    "browserify-loader": "^0.5.2",
     "coffee-script": "^1.10.0",
     "coffeelint": "^1.15.7",
+    "es6-promise": "^3.2.1",
     "eslint": "^2.6.0",
     "eslint-config-isiahmeadows": "^0.1.6",
+    "glob": "^7.0.3",
+    "karma": "^0.13.22",
+    "karma-chrome-launcher": "^1.0.1",
+    "karma-mocha": "^1.0.1",
     "minimatch": "^3.0.0",
-    "mocha": "^2.3.4"
+    "mkdirp": "^0.5.1",
+    "mocha": "^2.3.4",
+    "mocha-phantomjs-core": "^1.3.1",
+    "phantomjs-prebuilt": "^2.1.7"
   },
   "dependencies": {
     "bluebird": "^3.3.4",
@@ -46,7 +60,8 @@
     "glob-stream": "^5.3.2",
     "interpret": "^1.0.0",
     "resolve": "^1.1.7",
-    "supports-color": "^3.1.2"
+    "supports-color": "^3.1.2",
+    "util-inspect": "^0.1.8"
   },
   "directories": {
     "lib": "lib",
