--- a/.coffeelintignore
+++ b/.coffeelintignore
@@ -2,3 +2,6 @@ node_modules
 
 # Thallium uses dot files for its configs, and these need tested.
 !fixtures/**/.*
+
+# Ignore everything here...none of it's executed, anyways.
+fixtures/glob-stream/**
