--- a/package.json
+++ b/package.json
@@ -4,12 +4,16 @@
   "description": "A simple, unopinionated, modular test framework",
   "main": "index.js",
   "scripts": {
-    "lint": "eslint . && coffeelint .",
-    "phantom": "node scripts/generate-browser-entry.js && phantomjs node_modules/mocha-phantomjs-core/mocha-phantomjs-core.js test/index.html dot",
-    "test": "npm run lint && mocha"
+    "bundle": "browserify -dr thallium -s Thallium lib/browser-bundle.js -o thallium.js",
+    "release": "npm run test && npm run bundle",
+    "lint": "eslint . --cache && coffeelint . --cache",
+    "karma": "karma start --single-run --browsers Chrome",
+    "test": "npm run lint && mocha && npm run karma",
+    "watch": "chokidar --initial -i \"**/test-bundle.js\" \"{bin,fixtures,helpers,lib,r,scripts,test}/**/{.,}*.{js,coffee}\" \"{index,core,assertions}.js\" -c \"npm run test\""
   },
   "browser": {
-    "./lib/inspect.js": "./lib/inspect-browser.js",
+    "./lib/is-buffer.js": "is-buffer",
+    "./lib/inspect.js": "util-inspect",
     "./lib/reporter/console.js": "./lib/reporter/browser.js"
   },
   "files": [
@@ -38,25 +42,26 @@
   "author": "Isiah Meadows <me@isiahmeadows.com>",
   "license": "ISC",
   "devDependencies": {
+    "browserify": "^13.0.1",
+    "chokidar-cli": "^1.2.0",
     "coffee-script": "^1.10.0",
     "coffeelint": "^1.15.7",
-    "es6-promise": "^3.2.1",
     "eslint": "^2.6.0",
     "eslint-config-isiahmeadows": "^0.1.6",
-    "karma": "^0.13.22",
+    "karma": "^1.1.0",
+    "karma-browserify": "^5.0.5",
     "karma-chrome-launcher": "^1.0.1",
-    "karma-mocha": "^1.0.1",
-    "mkdirp": "^0.5.1",
+    "karma-firefox-launcher": "^1.0.0",
+    "karma-mocha": "^1.1.1",
     "mocha": "^2.3.4",
-    "mocha-phantomjs-core": "^1.3.1",
-    "phantomjs-prebuilt": "^2.1.7",
-    "systemjs": "^0.19.29"
+    "watchify": "^3.7.0"
   },
   "dependencies": {
     "bluebird": "^3.3.4",
     "diff": "^2.2.2",
     "glob": "^7.0.3",
     "interpret": "^1.0.0",
+    "is-buffer": "^1.1.3",
     "minimatch": "^3.0.0",
     "resolve": "^1.1.7",
     "through2": "^2.0.1",
