--- a/test/.eslintrc.yml
+++ b/test/.eslintrc.yml
@@ -1,3 +1,9 @@
-extends: ../.eslintrc.yml
+root: true
+extends: isiahmeadows
 env:
     mocha: true
+globals:
+    t: false
+    Util: false
+rules:
+    strict: [2, global]
