--- a/.eslintignore
+++ b/.eslintignore
@@ -5,3 +5,6 @@
 
 # Ignore everything here...none of it's executed, anyways.
 /fixtures/glob-stream/**
+
+# The bundle is likely to fail, anyways.
+/thallium.js
