--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A simple, unopinionated, modular test framework",
   "main": "index.js",
   "scripts": {
-    "bundle": "browserify -dr thallium -s Thallium lib/browser-bundle.js -o thallium.js",
+    "bundle": "browserify -dr ./lib/browser-bundle.js:thallium -o thallium.js",
     "release": "npm run test && npm run bundle",
     "lint": "eslint . --cache && coffeelint . --cache",
     "karma": "karma start --single-run --browsers Chrome",
@@ -22,6 +22,8 @@
     "core.js",
     "index.d.ts",
     "index.js",
+    "thallium.js",
+    "thallium.d.ts",
     "lib",
     "bin",
     "r",
