--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   },
   "browser": {
     "./lib/is-buffer.js": "is-buffer",
-    "./lib/inspect.js": "util-inspect"
+    "./lib/inspect.js": "util-inspect",
+    "jsdom": "empty/object"
   },
   "files": [
     "assertions.d.ts",
@@ -47,10 +48,10 @@
     "chokidar-cli": "^1.2.0",
     "coffee-script": "^1.10.0",
     "coffeelint": "^1.15.7",
+    "empty": "^0.10.1",
     "eslint": "^2.6.0",
     "eslint-config-isiahmeadows": "^0.1.6",
     "jsdom": "^9.4.0",
-    "jsdom-global": "^2.0.0",
     "karma": "^1.1.0",
     "karma-browserify": "^5.0.5",
     "karma-chrome-launcher": "^1.0.1",
