Add version hooks to avoid further mistakes

--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "bundle": "browserify -dr ./lib/browser-bundle.js:thallium -o thallium.js",
     "release": "npm run test && npm run bundle",
+    "preversion": "npm run release",
+    "version": "git add thallium.js",
     "lint": "eslint . --cache && coffeelint . --cache",
     "karma": "karma start --single-run --browsers Chrome",
     "test": "npm run lint && mocha && npm run karma",
