--- a/package.json
+++ b/package.json
@@ -65,12 +65,12 @@
   },
   "dependencies": {
     "bluebird": "^3.4.1",
-    "glob": "^7.0.3",
-    "interpret": "^1.0.0",
-    "is-buffer": "^1.1.3",
-    "minimatch": "^3.0.0",
+    "glob": "^7.0.5",
+    "interpret": "1",
+    "is-buffer": "1",
+    "minimatch": "^3.0.2",
     "resolve": "^1.1.7",
-    "through2": "^2.0.1",
+    "through2": "2",
     "util-inspect": "^0.1.8"
   },
   "directories": {
