--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "bundle": "browserify -dr ./lib/browser-bundle.js:thallium -o thallium.js",
     "release": "npm run test && npm run bundle",
-    "preversion": "npm run release",
+    "preversion": "npm run release && git add CHANGELOG.md",
     "postversion": "git push && git push --tags",
     "version": "git add thallium.js",
     "lint": "eslint . --cache && coffeelint . --cache",
