--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
   "author": "Isiah Meadows <me@isiahmeadows.com>",
   "license": "ISC",
   "devDependencies": {
+    "benchmark": "^2.1.1",
     "browserify": "^13.0.1",
     "chokidar-cli": "^1.2.0",
     "coffee-script": "^1.10.0",
@@ -65,6 +66,7 @@
     "karma-firefox-launcher": "^1.0.0",
     "karma-mocha": "^1.1.1",
     "mocha": "^3.0.2",
+    "readline-sync": "^1.4.4",
     "watchify": "^3.7.0"
   },
   "dependencies": {
