--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "r",
     "docs"
   ],
-  "bin": {"tl": "bin/tl.js"},
+  "bin": {
+    "tl": "bin/tl.js"
+  },
   "keywords": [
     "test",
     "testing",
@@ -49,6 +51,7 @@
     "karma-chrome-launcher": "^2.0.0",
     "karma-firefox-launcher": "^1.0.0",
     "karma-mocha": "^1.1.1",
+    "karma-phantomjs-launcher": "^1.0.2",
     "mocha": "^3.0.2",
     "semver": "^5.3.0",
     "shelljs": "^0.7.4",
