--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "coffee-script": "^1.10.0",
     "coffeelint": "^1.15.7",
     "empty": "^0.10.1",
+    "es6-promise": "^4.0.5",
     "eslint": "^3.4.0",
     "eslint-config-isiahmeadows": "^0.1.6",
     "jsdom": "^9.4.0",
@@ -58,7 +59,6 @@
     "watchify": "^3.7.0"
   },
   "dependencies": {
-    "bluebird": "^3.4.1",
     "glob": "^7.0.5",
     "interpret": "1",
     "minimatch": "^3.0.2",
