Re-modularize this, reduce memory footprint, fix several comments
- `thallium/assert` is now its own self-contained multi-file module
- `lib/thallium.js` is now in `lib/api/` as multiple files
- Report types moved to new module
- `Only` moved back into own module
- Most of `scripts/` was moved into a more descriptive `test-util/`
- The description of `lib/tests.js` was updated to better reflect the current
  layout
- The `Flags` mask is no more - duck typing is used instead now

--- a/package.json
+++ b/package.json
@@ -12,20 +12,20 @@
     "jsdom": "empty/object"
   },
   "files": [
-    "assertions.d.ts",
+    "assert",
     "assertions.js",
+    "bin",
     "core.d.ts",
     "core.js",
+    "docs",
     "index.d.ts",
     "index.js",
-    "thallium-migrate.js",
-    "thallium.js",
-    "thallium.d.ts",
     "lib",
-    "bin",
-    "r",
     "migrate",
-    "docs"
+    "r",
+    "thallium-migrate.js",
+    "thallium.d.ts",
+    "thallium.js"
   ],
   "bin": {
     "tl": "bin/tl.js"
