--- a/package.json
+++ b/package.json
@@ -1,77 +1,1 @@
-{
-  "name": "thallium",
-  "version": "0.2.10",
-  "description": "A simple, unopinionated, modular test framework",
-  "main": "index.js",
-  "scripts": {
-    "test": "node make"
-  },
-  "browser": {
-    "./lib/replaced/inspect.js": "./node_modules/util-inspect/index.js",
-    "./lib/replaced/console.js": "./lib/replaced/console-browser.js",
-    "jsdom": "./node_modules/empty/object.js"
-  },
-  "files": [
-    "assert",
-    "assertions.js",
-    "bin",
-    "core.d.ts",
-    "core.js",
-    "docs",
-    "index.d.ts",
-    "index.js",
-    "lib",
-    "migrate",
-    "r",
-    "thallium-migrate.js",
-    "thallium.d.ts",
-    "thallium.js"
-  ],
-  "bin": {
-    "tl": "bin/tl.js"
-  },
-  "keywords": [
-    "test",
-    "testing",
-    "tdd",
-    "thallium"
-  ],
-  "author": "Isiah Meadows <me@isiahmeadows.com>",
-  "license": "ISC",
-  "devDependencies": {
-    "benchmark": "^2.1.1",
-    "browserify": "^13.0.1",
-    "chokidar": "^1.6.0",
-    "coffee-script": "^1.10.0",
-    "coffeelint": "^1.15.7",
-    "empty": "^0.10.1",
-    "es6-promise": "^4.0.5",
-    "eslint": "^3.4.0",
-    "eslint-config-isiahmeadows": "^0.1.6",
-    "jsdom": "^9.4.0",
-    "karma": "^1.1.0",
-    "karma-browserify": "^5.0.5",
-    "karma-chrome-launcher": "^2.0.0",
-    "karma-firefox-launcher": "^1.0.0",
-    "karma-mocha": "^1.1.1",
-    "karma-phantomjs-launcher": "^1.0.2",
-    "mocha": "^3.0.2",
-    "semver": "^5.3.0",
-    "shelljs": "^0.7.4",
-    "watchify": "^3.7.0"
-  },
-  "dependencies": {
-    "glob": "^7.0.5",
-    "interpret": "1",
-    "minimatch": "^3.0.2",
-    "util-inspect": "^0.1.8"
-  },
-  "directories": {
-    "lib": "lib",
-    "doc": "docs",
-    "example": "docs/examples"
-  },
-  "repository": "isiahmeadows/thallium",
-  "bugs": "https://github.com/isiahmeadows/thallium/issues",
-  "homepage": "https://github.com/isiahmeadows/thallium#readme"
-}
+{"name":"thallium","version":"0.3.0","description":"A simple, unopinionated, modular test framework","main":"index.js","scripts":{"test":"node make"},"browser":{"./lib/replaced/inspect.js":"./node_modules/util-inspect/index.js","./lib/replaced/console.js":"./lib/replaced/console-browser.js","jsdom":"./node_modules/empty/object.js"},"files":["assert","assertions.js","bin","core.d.ts","core.js","docs","index.d.ts","index.js","lib","migrate","r","thallium-migrate.js","thallium.d.ts","thallium.js"],"bin":{"tl":"bin/tl.js"},"keywords":["test","testing","tdd","thallium"],"author":"Isiah Meadows <me@isiahmeadows.com>","license":"ISC","devDependencies":{"benchmark":"^2.1.1","browserify":"^13.0.1","chokidar":"^1.6.0","coffee-script":"^1.10.0","coffeelint":"^1.15.7","empty":"^0.10.1","es6-promise":"^4.0.5","eslint":"^3.4.0","eslint-config-isiahmeadows":"^0.1.6","jsdom":"^9.4.0","karma":"^1.1.0","karma-browserify":"^5.0.5","karma-chrome-launcher":"^2.0.0","karma-firefox-launcher":"^1.0.0","karma-mocha":"^1.1.1","karma-phantomjs-launcher":"^1.0.2","mocha":"^3.0.2","semver":"^5.3.0","shelljs":"^0.7.4","watchify":"^3.7.0"},"dependencies":{"glob":"^7.0.5","interpret":"1","minimatch":"^3.0.2","util-inspect":"^0.1.8"},"directories":{"lib":"lib","doc":"docs","example":"docs/examples"},"repository":"isiahmeadows/thallium","bugs":"https://github.com/isiahmeadows/thallium/issues","homepage":"https://github.com/isiahmeadows/thallium#readme"}
