--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,7 +7,7 @@ environment:
       task: test:node
     - nodejs_version: 6
       task: test:node
-    - nodejs_version: stable
+    - nodejs_version: 6
       task: test:phantomjs
 
 install:
