Test against OS X in Travis, add official support.
Apparently, the failures were platform-independent, just cloaked somehow in the
Linux builds until I fixed another bug.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,10 @@
 language: node_js
 
+node_js:
+  - "4"
+  - "5"
+  - "6"
+
 os:
   - osx
   - linux
@@ -31,33 +36,30 @@ script:
 matrix:
   fast_finish: true
   include:
-    - node_js: "4"
-      env: ENV=node
-    - node_js: "5"
-      env: ENV=node
-    - node_js: "6"
-      env: ENV=node
-
     # Browser tests
-    - node_js: stable
+    - node_js: "6"
       env: ENV=chrome
       os: linux
       sudo: required
       dist: trusty
-    - node_js: stable
+    - node_js: "6"
       env: ENV=firefox
       os: linux
       addons:
         firefox: latest
-    - node_js: stable
+    - node_js: "6"
       env: ENV=firefox-beta
       os: linux
       addons:
         firefox: latest-beta
-    - node_js: stable
+    - node_js: "6"
       env: ENV=firefox-esr
       os: linux
       addons:
         firefox: latest-esr
-    - node_js: stable
+    - node_js: "6"
       env: ENV=phantomjs
+      os: osx
+    - node_js: "6"
+      env: ENV=phantomjs
+      os: linux
