--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,6 +7,8 @@ environment:
       task: test:node
     - nodejs_version: 6
       task: test:node
+    - nodejs_version: 7
+      task: test:node
     - nodejs_version: 6
       task: test:phantomjs
 
