--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "watchify": "^3.7.0"
   },
   "dependencies": {
+    "clean-match": "^1.0.0",
     "glob": "^7.0.5",
     "interpret": "1",
     "minimatch": "^3.0.2",
