Move thallium/assert implementation out of core

--- a/.npmignore
+++ b/.npmignore
@@ -1,6 +1,5 @@
 # General dev crap
 /appveyor.yml
-/bench
 /coffeelint.json
 /fixtures
 /karma.conf.js
@@ -16,3 +15,6 @@
 # Any incomplete, in-progress feature goes here.
 /r/dom.js
 /r/dom.d.ts
+
+# Specific exclusion because it's used for post-install.
+!/scripts/update-clean-assert.js
