--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,9 @@
 language: node_js
 
 node_js:
-  - "4"
-  - "5"
   - "6"
   - "7"
+  - "8"
 
 os:
   - osx
@@ -37,7 +36,7 @@ script:
 matrix:
   fast_finish: true
   include:
-    # Browser tests
+    # Browser tests, uses current LTS
     - node_js: "6"
       env: ENV=chrome
       os: linux
